# LEAD-Net

./: .gitattributes  .gitignore  .markdownlint.json  README.md  README_EN.md  README_zh.md  pyproject.toml  requirements.txt  ~$算法模块实现计划文档-2.docx
configs/: README.md  baseline_ssd.yaml  default.yaml  lca_ssd.yaml  lead_subset.yaml  lead_subset_smoke.yaml  lead_subset_ultralytics.yaml  train_baseline.yaml  train_lca.yaml
deploy/: .gitkeep
deploy/openmv/: benchmark.py
docxs/: PLAN.md  RESEARCH.md
lead_net/: __init__.py
lead_net/compress/: __init__.py  channel_pruner.py
lead_net/cv_fallback/: __init__.py  blob_detector.py  foreground_mask.py  ground_segmenter.py
lead_net/data/: __init__.py  augment.py  coco_dataset.py  dataloader.py  (+3 more)
scripts/: train_cloud.ps1  train_cloud.sh
tests/: test_cv_fallback.py  test_data_pipeline.py  test_decision.py  test_imports.py  test_kalman_filter.py  test_lca.py  test_lca_yolo_integration.py  test_tracker.py
tools/: _fix_md.py  _fix_tables.py  _table1.txt  _table2.txt  _table3.txt  build_hard_subsets.py  cloud_train.py  collect_failure_cases.py  dataset_stats.py  dataset_stats_txt.py  download_coco.py  eval.py  eval_decision_sensitivity.py  eval_quantization.py  eval_tracking.py  generate_ablation_matrix.py  gpu_stress_test.py  infer.py  inspect_anchors.py  inspect_data.py  inspect_model.py  lr_range_test.py  overfit_test.py  prepare_lead_dataset.py  quick_map_test.py  short_test.py  smoke_verify_models.py  stage1c_lca_gain_train.py  stage1c_static_verify.py  train.py  verify_map_fix.py  visualize_predictions.py
(+60 files in other folders)
