[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-net"
version = "0.1.0-m4"
description = "LEAD-Net: Lightweight Edge-AI Detection Network"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "LEAD-Net Team" },
]

[tool.setuptools.packages.find]
include = ["lead_net*"]
